--- a/Project 1_Time_Hour Analysis_RM.ipynb
+++ b/Project 1_Time_Hour Analysis_RM.ipynb
@@ -2065,6 +2065,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OBSERVED</th>\n",
+       "      <th>HOUR</th>\n",
+       "      <th>EXPECTED</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18422</td>\n",
+       "      <td>2</td>\n",
+       "      <td>64927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>106793</td>\n",
+       "      <td>14</td>\n",
+       "      <td>64927</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>54945</td>\n",
+       "      <td>21</td>\n",
+       "      <td>64927</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    OBSERVED  HOUR  EXPECTED\n",
+       "2      18422     2     64927\n",
+       "14    106793    14     64927\n",
+       "21     54945    21     64927"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chi_s3 = ra[(ra['HOUR']==2) | (ra['HOUR']==14)| (ra['HOUR']==21)] \n",
+    "chi_s3 = chi_s3.rename(columns={'DATE':'OBSERVED'}) \n",
+    "chi_s3['EXPECTED'] = round(ra['DATE'].mean())\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "critical_value = stats.chi2.ppf(q = 0.95, df = 2)\n",
+    "chi_s3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.99146454711\n"
+     ]
+    }
+   ],
+   "source": [
+    "critical_value = stats.chi2.ppf(q = 0.95, df = 2)\n",
+    "print(critical_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Power_divergenceResult(statistic=61840.487085496025, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.chisquare(chi_s3['OBSERVED'],chi_s3['EXPECTED'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
